--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Ohjelmoinnin perusteet</title>
-	<link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <header>
@@ -14,6 +14,10 @@
         <h2>Tehtäviä</h2>
         <ul>
             <li><a href="ws1.html">1 - Hello World</a></li>
+            <li><a href="ws2.html">2 - Muuttujat</a></li>
+            <li><a href="ws3.html">3 - Ehtolauseet</a></li>
+            <li><a href="ws4.html">4 - Toistolauseet</a></li>
+            <li><a href="ws5.html">5 - Metodit</a></li>
         </ul>
     </main>
 	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
