--- a/ws1.html
+++ b/ws1.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <h2><a href="/">Ohjelmoinnin perusteet</a></h2>
         <img src="img/javascript.png" alt="JavaScript Logo">
         <h1>WS1 - Hello World</h1>
     </header>
