--- a/ws1_solution.html
+++ b/ws1_solution.html
@@ -6,9 +6,18 @@
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-	<h1>WS1 - Hello World</h1>
+    <header>
+        <h2><a href="/">Ohjelmoinnin perusteet</a></h2>
+        <img src="img/javascript.png" alt="JavaScript Logo">
+        <h1>WS1 - Hello World</h1>
+    </header>
     <h2>1. Ensimmäinen tehtäväsi on klassinen Hello world, jonka ideana on saada kirjoitettua sivulle jotakin JavaScriptin avulla.</h2>
-    <p>Älä välitä vielä mihin kohtaan sivulla teksti tulee, vaan kokeile metodia document.write ja kirjoita jotain sivulle.</p>
+    <p>Älä välitä vielä mihin kohtaan sivulla teksti tulee, vaan kokeile metodia <span class="code">document.write</span> ja kirjoita jotain sivulle.</p>
+    <hr>
+    <h2>2. Kokeillaan seuraavaksi tervehtimistä vähän eri tavalla, viestiboksin kautta.</h2>
+    <p>Kokeile näyttää sivulla viesti <span class="code">alert</span>-metodin avulla. </p>
+    <hr>
+    <!-- Sisältö päättyy-->
 	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
 	<script src="JS/ws1.js"></script>
 </body>
