--- a/ws2_solution.html
+++ b/ws2_solution.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>WS2 - Muuttujat</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
