--- a/ws4_solution.html
+++ b/ws4_solution.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>WS4 - Toistolauseet</title>
+    <title>WS4 - Toistolauseet</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
