Lisätty 1.3, muokattu otsikoita

--- a/ws1_solution.html
+++ b/ws1_solution.html
@@ -12,12 +12,19 @@
         <img src="img/javascript.png" alt="JavaScript Logo">
         <h1>WS1 - Hello World</h1>
     </header>
-    <h2>1. Ensimmäinen tehtäväsi on klassinen Hello world, jonka ideana on saada kirjoitettua sivulle jotakin JavaScriptin avulla.</h2>
+    <h2>1. document.write - Ensimmäinen tehtäväsi on klassinen Hello world, jonka ideana on saada kirjoitettua sivulle jotakin JavaScriptin avulla.</h2>
     <p>Älä välitä vielä mihin kohtaan sivulla teksti tulee, vaan kokeile metodia <span class="code">document.write</span> ja kirjoita jotain sivulle.</p>
     <hr>
-    <h2>2. Kokeillaan seuraavaksi tervehtimistä vähän eri tavalla, viestiboksin kautta.</h2>
+    <h2>2. alert - Kokeillaan seuraavaksi tervehtimistä vähän eri tavalla, viestiboksin kautta.</h2>
     <p>Kokeile näyttää sivulla viesti <span class="code">alert</span>-metodin avulla. </p>
     <hr>
+    <h2>3. document.getElementById - Viestin kirjoittaminen haluttuun elementtiin sivulla.</h2>
+    <p>Jotta voisit hallita sivullasi olevia HTML-elementtejä tarvitset JavaScript DOM:a (Document Object Model). Yksinkertaisimmillaan voit käyttää HTML-elementin ID-attribuuttia elementin käsittelyyn.</p> 
+    <p></p><span class="code">document.getElementById</span>-metodilla voit viitata tietyn ID:n omaavaan elementtiin. <span class="code">innerHTML</span>-ominaisuudella voit määrittää mitä elementin sisälle tulee.</p>
+    <p>Kokeile kirjoittaa jotakin allaolevaan laatikkoon.</p>
+    <div id="write-here" class="bordered">
+
+    </div>
     <!-- Sisältö päättyy-->
 	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
 	<script src="JS/ws1.js"></script>
