--- a/ws1.html
+++ b/ws1.html
@@ -25,6 +25,12 @@
     <div id="write-here" class="bordered">
 
     </div>
+    <h2>4. Lukeminen</h2>
+    <p>Kokeillaan seuraavaksi arvon lukemista elementiltä.</p> 
+    <p>Kokeile kirjoittaa allaolevaan laatikkoon henkilön kokonimi etunimi- ja sukunimikenttien perusteella.</p>
+    <label for="firstname">Etunimi:</label><input type="text" id="firstname" value="James"></input>
+    <label for="lastname">Sukunimi:</label><input type="text" id="lastname" value="Smith"></input>
+    <label for="fullname">Kokonimi:</label><input type="text" id="fullname" value=""></input>
     <!-- Sisältö päättyy-->
 	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
 </body>
