--- a/ws1.html
+++ b/ws1.html
@@ -12,12 +12,15 @@
         <img src="img/javascript.png" alt="JavaScript Logo">
         <h1>WS1 - Hello World</h1>
     </header>
+    <!-- Tehtävä 1. document.write -->
     <h2>1. document.write - Ensimmäinen tehtäväsi on klassinen Hello world, jonka ideana on saada kirjoitettua sivulle jotakin JavaScriptin avulla.</h2>
     <p>Älä välitä vielä mihin kohtaan sivulla teksti tulee, vaan kokeile metodia <span class="code">document.write</span> ja kirjoita jotain sivulle.</p>
     <hr>
+    <!-- Tehtävä 2. alert -->
     <h2>2. alert - Kokeillaan seuraavaksi tervehtimistä vähän eri tavalla, viestiboksin kautta.</h2>
     <p>Kokeile näyttää sivulla viesti <span class="code">alert</span>-metodin avulla. </p>
     <hr>
+    <!-- Tehtävä 3. document.getElementById -->
     <h2>3. document.getElementById - Viestin kirjoittaminen haluttuun elementtiin sivulla.</h2>
     <p>Jotta voisit hallita sivullasi olevia HTML-elementtejä tarvitset JavaScript DOM:a (Document Object Model). Yksinkertaisimmillaan voit käyttää HTML-elementin ID-attribuuttia elementin käsittelyyn.</p> 
     <p></p><span class="code">document.getElementById</span>-metodilla voit viitata tietyn ID:n omaavaan elementtiin. <span class="code">innerHTML</span>-ominaisuudella voit määrittää mitä elementin sisälle tulee.</p>
@@ -25,12 +28,20 @@
     <div id="write-here" class="bordered">
 
     </div>
+    <hr>
+    <!-- Tehtävä 4. Lukeminen -->
     <h2>4. Lukeminen</h2>
     <p>Kokeillaan seuraavaksi arvon lukemista elementiltä.</p> 
-    <p>Kokeile kirjoittaa allaolevaan laatikkoon henkilön kokonimi etunimi- ja sukunimikenttien perusteella.</p>
-    <label for="firstname">Etunimi:</label><input type="text" id="firstname" value="James"></input>
-    <label for="lastname">Sukunimi:</label><input type="text" id="lastname" value="Smith"></input>
-    <label for="fullname">Kokonimi:</label><input type="text" id="fullname" value=""></input>
+    <p>Kokeile kirjoittaa allaolevaan laatikkoon henkilön syötekenttien mukainen nimi ja ikä sopiviin kohtiin.</p>
+    <label for="firstname">Etunimi:</label><input type="text" id="firstname-input" value="James"></input>
+    <label for="lastname">Sukunimi:</label><input type="text" id="lastname-input" value="Smith"></input>
+    <label for="age">Ikä:</label><input type="text" id="age-input" value="32"></input>
+    <p class="bordered">Hei <span id="firstname"></span> <span id="lastname"></span>! Olet <span id="age"></span>-vuotias.</p>
+    <!-- Tehtävä 5. setAttribute -->
+    <h2>5. setAttribute & style - Ominaisuuksien vaihtaminen</h2>
+    <p>Vaihdetaan sitten elementin attribuutin arvoa. Muuta allaoleva linkki ohjaamaan SeAMK:n sivulle.</p> 
+    <p>Vaihda linkin fontin väriksi musta, taustaväriksi punainen ja lihavoi fontti.</p>
+    <a id="box" class="bordered" href="http://www.google.com">Tämän boksin taustaväri on punainen ja fontti on lihavoitu.</a>
     <!-- Sisältö päättyy-->
 	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
 </body>
