--- a/ws2.html
+++ b/ws2.html
@@ -2,16 +2,39 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>WS2 - Muuttujat</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<title>WS2 - Muuttujat, operaattorit & tapahtumat</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <header>
         <h2><a href="/">Ohjelmoinnin perusteet</a></h2>
         <img src="img/javascript.png" alt="JavaScript Logo">
-        <h1>WS2 - Muuttujat</h1>
+        <h1>WS2 - Muuttujat, operaattorit ja tapahtumat</h1>
     </header>
+    <!-- Tehtävä 1. ensimmäinen muuttuja -->
+    <h2>1. Ensimmäinen muuttuja</h2>
+    <p>Luo muuttuja <span class="code">age</span> ja anna sille arvoksi 5. Tulosta muuttujan arvo alla olevaan laatikkoon.</p>
+    <div id="age" class="bordered"></div>
+    <hr>
+    <!-- Tehtävä 2. koiran ikä -->
+    <h2>2. Koiran ikä ihmisen iässä</h2>
+    <p>Käytä edellisessä tehtävässä luotua muuttujaa ja laske sen perusteella koiran ikä ihmisen iässä (kerrotaan tässä seitsemällä, vaikkakaan perinteiselle kaavalle ei ole tieteellistä perustetta), tallenna se uuteen muuttujaan ja tulosta se alla olevaan laatikkoon.</p>
+    <div id="dogsAge" class="bordered"></div>
+    <hr>
+    <!-- Tehtävä 3. merkkijonojen yhdistelyä -->
+    <h2>3. Merkkijonojen yhdistelyä</h2>
+    <p>Yhdistä etunimi ja sukunimi kokonimeksi vastaavaan kenttään.</p>
+    <label for="firstname">Etunimi:</label><input type="text" id="firstname-input" value="James"></input>
+    <label for="lastname">Sukunimi:</label><input type="text" id="lastname-input" value="Smith"></input>
+    <label for="fullname">Kokonimi:</label><input type="text" id="fullname-input" value=""></input>
+    <hr>
+    <!-- Tehtävä 4. painikelaskuri -->
+    <h2>4. Painikelaskuri</h2>
+    <p>Kirjoita allaolevalle painikkeelle toiminnallisuus, että se kasvattaa painikkeen alla olevaa laskuria jokaisella klikkauksella yhdellä.</p>
+    <input type="button" id="btnCounter" value="Increment counter"></input>
+    <label for="counter">Laskuri:</label><input type="text" id="counter" value="0"></input>
+    <hr>
     <!-- Sisältö päättyy-->
 	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
 </body>
