--- a/ws2.html
+++ b/ws2.html
@@ -35,6 +35,17 @@
     <input type="button" id="btnCounter" value="Increment counter"></input>
     <label for="counter">Laskuri:</label><input type="text" id="counter" value="0"></input>
     <hr>
+    <!-- Tehtävä 5. yksinkertaistettu laskin -->
+    <h2>5. Yksinkertaistettu laskin</h2>
+    <p>Kirjoita toiminnallisuus allaoleville painikkeille niin, että se toimii yksinkertaisen laskimen tapaan.</p>
+    <input type="number" id="operand1" value="0"></input>
+    <input type="button" id="addition" value="+"></input>
+    <input type="button" id="deduction" value="-"></input>
+    <input type="button" id="multiplication" value="*"></input>
+    <input type="button" id="division" value="/"></input>
+    <input type="number" id="operand2" value="0"></input>
+    <label for="result">= </label><input type="text" id="result" value="0"></input>
+    <hr>
     <!-- Sisältö päättyy-->
 	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
 </body>
