Lisätty edellinen ja seuraava -linkit footeriin

--- a/ws1.html
+++ b/ws1.html
@@ -43,6 +43,9 @@
     <p>Vaihda linkin fontin väriksi musta, taustaväriksi punainen ja lihavoi fontti.</p>
     <a id="box" class="bordered" href="http://www.google.com">Tämän boksin taustaväri on punainen ja fontti on lihavoitu.</a>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+    <footer>
+        <a href="index.html"><< Edellinen</a> || <a href="ws2.html">Seuraava >></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 </body>
 </html>
