--- a/ws2.html
+++ b/ws2.html
@@ -47,6 +47,9 @@
     <label for="result">= </label><input type="text" id="result" value="0"></input>
     <hr>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws1.html"><< Edellinen</a> || <a href="ws3.html">Seuraava >></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 </body>
 </html>
