--- a/ws2_solution.html
+++ b/ws2_solution.html
@@ -47,7 +47,10 @@
     <label for="result">= </label><input type="text" id="result" value="0"></input>
     <hr>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws1_solution.html"><< Edellinen</a> || <a href="ws3_solution.html">Seuraava >></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 	<script src="JS/ws2.js"></script>
 </body>
 </html>
