--- a/ws3_solution.html
+++ b/ws3_solution.html
@@ -13,7 +13,10 @@
         <h1>WS3 - Ehtolauseet</h1>
     </header>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws2_solution.html"><< Edellinen</a> || <a href="ws4_solution.html">Seuraava >></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 	<script src="JS/ws3.js"></script>
 </body>
 </html>
