--- a/ws4.html
+++ b/ws4.html
@@ -13,6 +13,9 @@
         <h1>WS4 - Toistolauseet</h1>
     </header>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws3.html"><< Edellinen</a> || <a href="ws5.html">Seuraava >></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 </body>
 </html>
