--- a/ws4_solution.html
+++ b/ws4_solution.html
@@ -13,7 +13,10 @@
         <h1>WS4 - Toistolauseet</h1>
     </header>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws3_solution.html"><< Edellinen</a> || <a href="ws5_solution.html">Seuraava >></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 	<script src="JS/ws4.js"></script>
 </body>
 </html>
