--- a/ws5.html
+++ b/ws5.html
@@ -13,6 +13,9 @@
         <h1>WS5 - Metodit</h1>
     </header>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws4.html"><< Edellinen</a></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 </body>
 </html>
