--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
 	<main>
         <h2>Tehtäviä</h2>
         <ul>
-            <li><a href="ws1.html">1 - Hello World</a></li>
-            <li><a href="ws2.html">2 - Muuttujat</a></li>
+            <li><a href="ws1.html">1 - Hello World!</a></li>
+            <li><a href="ws2.html">2 - Muuttujat, operaattorit & tapahtumat</a></li>
             <li><a href="ws3.html">3 - Ehtolauseet</a></li>
             <li><a href="ws4.html">4 - Toistolauseet</a></li>
             <li><a href="ws5.html">5 - Metodit</a></li>
         </ul>
+        <h2>Tehtävien malliratkaisut</h2>
+        <ul>
+            <li><a href="ws1_solution.html">1 - Hello World!</a></li>
+            <li><a href="ws2_solution.html">2 - Muuttujat, operaattorit & tapahtumat</a></li>
+            <li><a href="ws3_solution.html">3 - Ehtolauseet</a></li>
+            <li><a href="ws4_solution.html">4 - Toistolauseet</a></li>
+            <li><a href="ws5_solution.html">5 - Metodit</a></li>
+        </ul>
     </main>
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws1.html">Seuraava >></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 </body>
 </html>
