--- a/ws3.html
+++ b/ws3.html
@@ -13,6 +13,9 @@
         <h1>WS3 - Ehtolauseet</h1>
     </header>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws2.html"><< Edellinen</a> || <a href="ws4.html">Seuraava >></a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 </body>
 </html>
