--- a/ws5_solution.html
+++ b/ws5_solution.html
@@ -13,7 +13,10 @@
         <h1>WS5 - Metodit</h1>
     </header>
     <!-- Sisältö päättyy-->
-	<footer>&copy; Meija Lohiniva Seinäjoki UAS</footer>
+	<footer>
+        <a href="ws4_solution.html"><< Edellinen</a>
+        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+    </footer>
 	<script src="JS/ws5.js"></script>
 </body>
 </html>
