--- a/ws3_solution.html
+++ b/ws3_solution.html
@@ -10,7 +10,7 @@
     <header>
         <h2><a href="/">Ohjelmoinnin perusteet</a></h2>
         <img src="img/javascript.png" alt="JavaScript Logo">
-        <h1>WS3 - Ehtolausee / Solutions</h1>
+        <h1>WS3 - Ehtolauseet / Ratkaisut</h1>
     </header>
     <!-- Tehtävä 1. ensimmäinen ehtolause -->
     <h2>1. Ensimmäinen ehtolause</h2>
