--- a/ws5_solution.html
+++ b/ws5_solution.html
@@ -12,7 +12,9 @@
         <img src="img/javascript.png" alt="JavaScript Logo">
         <h1>WS5 - Metodit</h1>
     </header>
-    <!-- Sisältö päättyy-->
+    <main>
+        <!-- Sisältö päättyy-->
+    </main>
 	<footer>
         <a href="ws4_solution.html"><< Edellinen</a>
         <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
