--- a/ws3_solution.html
+++ b/ws3_solution.html
@@ -30,7 +30,7 @@
         <hr>
         <!-- Tehtävä 4. Ensimmäinen else-if-lause -->
         <h2>4. Ensimmäinen else-if-lause</h2>
-        <p>Lisää ehtolauseeseesi elseif-haara, jolla tulostetaan "Olet juuri saavuttanut täysi-ikäisyyden", jos <span class="code">age</span>-muuttujan perusteella käyttäjä on täysi-ikäinen.</p>
+        <p>Lisää ehtolauseeseesi elseif-haara, jolla tulostetaan "Olet juuri saavuttanut täysi-ikäisyyden", jos <span class="code">age</span>-muuttujan perusteella käyttäjä on tasan 18.</p>
         <div id="age4" class="bordered"></div>
         <hr>
         <!-- Tehtävä 5. Vuorokauden ajan mukainen tervehdys -->
