Added id for H1 for demo purposes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="img/javascript.png" alt="JavaScript Logo">
-        <h1>Ohjelmoinnin perusteet</h1>
+        <h1 id="course-title">Ohjelmoinnin perusteet</h1>
     </header>
 	<main>
         <h2>Tehtäviä</h2>
