--- a/ws1.html
+++ b/ws1.html
@@ -34,6 +34,7 @@
         <h2>4. Lukeminen</h2>
         <p>Kokeillaan seuraavaksi arvon lukemista elementiltä.</p> 
         <p>Kokeile kirjoittaa allaolevaan laatikkoon henkilön syötekenttien mukainen nimi ja ikä sopiviin kohtiin.</p>
+        <p>Huom! Ei tarvitse tässä vaiheessa vielä toteuttaa niin, että päivittyisivät arvojen muuttuessa, vaan riittää, että osaat lukea HTML:ssä syötetyt tiedot.</p>
         <label for="firstname">Etunimi:</label><input type="text" id="firstname-input" value="James"></input>
         <label for="lastname">Sukunimi:</label><input type="text" id="lastname-input" value="Smith"></input>
         <label for="age">Ikä:</label><input type="text" id="age-input" value="32"></input>
