--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
         <ul>
             <li><a href="ws1.html">1 - Hello World!</a></li>
             <li><a href="ws2.html">2 - Muuttujat, operaattorit & tapahtumat</a></li>
-            <li><a href="ws3.html">3 - Ehtolauseet</a></li>
-            <li><a href="ws4.html">4 - Toistolauseet</a></li>
-            <li><a href="ws5.html">5 - Metodit</a></li>
+            <li><a href="ws3.html">3 - BOM & DOM</a></li>
+            <li><a href="ws4.html">4 - Ehtolauseet</a></li>
+            <li><a href="ws5.html">5 - Toistolauseet</a></li>
+            <li><a href="ws6.html">6 - Metodit</a></li>
         </ul>
         <h2>Tehtävien malliratkaisut</h2>
         <ul>
             <li><a href="ws1_solution.html">1 - Hello World!</a></li>
             <li><a href="ws2_solution.html">2 - Muuttujat, operaattorit & tapahtumat</a></li>
-            <li><a href="ws3_solution.html">3 - Ehtolauseet</a></li>
-            <li><a href="ws4_solution.html">4 - Toistolauseet</a></li>
-            <li><a href="ws5_solution.html">5 - Metodit</a></li>
+            <li><a href="ws3_solution.html">3 - BOM & DOM</a></li>
+            <li><a href="ws4_solution.html">4 - Ehtolauseet</a></li>
+            <li><a href="ws5_solution.html">5 - Toistolauseet</a></li>
+            <li><a href="ws6_solution.html">6 - Metodit</a></li>
         </ul>
     </main>
 	<footer>
