--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
 	<footer>
         <a href="ws1.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 </body>
 </html>
