--- a/ws1_solution.html
+++ b/ws1_solution.html
@@ -47,7 +47,7 @@
     </main>
 	<footer>
         <a href="index.html"><< Edellinen</a> || <a href="ws2_solution.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 	<script src="JS/ws1.js"></script>
 </body>
