--- a/ws2.html
+++ b/ws2.html
@@ -51,7 +51,7 @@
     </main>
 	<footer>
         <a href="ws1.html"><< Edellinen</a> || <a href="ws3.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 </body>
 </html>
