--- a/ws2_solution.html
+++ b/ws2_solution.html
@@ -51,7 +51,7 @@
     <!-- Sisältö päättyy-->
 	<footer>
         <a href="ws1_solution.html"><< Edellinen</a> || <a href="ws3_solution.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 	<script src="JS/ws2.js"></script>
 </body>
