--- a/ws4.html
+++ b/ws4.html
@@ -54,7 +54,7 @@
     </main>
 	<footer>
         <a href="ws3_solution.html"><< Edellinen</a> || <a href="ws5_solution.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 </body>
 </html>
