--- a/ws4_solution.html
+++ b/ws4_solution.html
@@ -53,7 +53,7 @@
     </main>
 	<footer>
         <a href="ws3_solution.html"><< Edellinen</a> || <a href="ws5_solution.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 	<script src="JS/ws4.js"></script>
 </body>
