--- a/ws5.html
+++ b/ws5.html
@@ -52,7 +52,7 @@
     </main>
 	<footer>
         <a href="ws4.html"><< Edellinen</a> || <a href="ws6.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 </body>
 </html>
