--- a/ws5_solution.html
+++ b/ws5_solution.html
@@ -52,7 +52,7 @@
     </main>
 	<footer>
         <a href="ws4_solution.html"><< Edellinen</a> || <a href="ws6_solution.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 	<script src="JS/ws5.js"></script>
 </body>
