--- a/ws6.html
+++ b/ws6.html
@@ -15,7 +15,7 @@
     <!-- Sisältö päättyy-->
 	<footer>
         <a href="ws5.html"><< Edellinen</a></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 </body>
 </html>
