--- a/ws6_solution.html
+++ b/ws6_solution.html
@@ -17,7 +17,7 @@
     </main>
 	<footer>
         <a href="ws5_solution.html"><< Edellinen</a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 	<script src="JS/ws6.js"></script>
 </body>
