--- a/ws1.html
+++ b/ws1.html
@@ -48,7 +48,7 @@
     </main>
     <footer>
         <a href="index.html"><< Edellinen</a> || <a href="ws2.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 </body>
 </html>
