--- a/ws3.html
+++ b/ws3.html
@@ -57,7 +57,7 @@
     </main>
 	<footer>
         <a href="ws2.html"><< Edellinen</a> || <a href="ws4.html">Seuraava >></a>
-        <p>&copy; Meija Lohiniva Seinäjoki UAS</p>
+        <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 </body>
 </html>
