Poistettu titlestä &-merkki, lisätty Number() -kommentti

--- a/ws2.html
+++ b/ws2.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Head-osiossa on sivuun liittyviä metatietoja -->
 	<meta charset="utf-8">
-	<title>WS2 - Muuttujat, operaattorit & tapahtumat</title>
+	<title>WS2 - Muuttujat, operaattorit ja tapahtumat</title>
+    <!-- Tässä lisätään favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <!-- Tässä lisätään CSS-tiedosto -->
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
+    <!-- Body-osiossa on kaikki mitä sivulla näkyy -->
+    <!-- Header-elementti on HTML5-elementti, jolla kerrotaan, että tässä on header-elementit -->
     <header>
         <h2><a href="/">Ohjelmoinnin perusteet</a></h2>
         <img src="img/javascript.png" alt="JavaScript Logo">
@@ -39,6 +44,7 @@
         <!-- Tehtävä 5. yksinkertaistettu laskin -->
         <h2>5. Yksinkertaistettu laskin</h2>
         <p>Kirjoita toiminnallisuus allaoleville painikkeille niin, että se toimii yksinkertaisen laskimen tapaan.</p>
+        <p>Huom! Tekeekö yhteenlasku yhteenlaskun vai merkkijonojen yhdistämisen? Voit pakottaa value:lla saatavan arvon numeeriseksi Number(document.getElementById().value).</p>
         <input type="number" id="operand1" value="0"></input>
         <input type="button" id="addition" value="+"></input>
         <input type="button" id="deduction" value="-"></input>
