Lisätty WS7 - errors

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="ws4.html">4 - Ehtolauseet</a></li>
             <li><a href="ws5.html">5 - Toistolauseet</a></li>
             <li><a href="ws6.html">6 - Metodit</a></li>
+            <li><a href="ws7.html">7 - Errors</a></li>
         </ul>
         <h2>Tehtävien malliratkaisut</h2>
         <ul>
@@ -29,6 +30,7 @@
             <li><a href="ws4_solution.html">4 - Ehtolauseet</a></li>
             <li><a href="ws5_solution.html">5 - Toistolauseet</a></li>
             <li><a href="ws6_solution.html">6 - Metodit</a></li>
+            <li><a href="ws7_solution.html">7 - Errors</a></li>
         </ul>
     </main>
 	<footer>
