--- a/ws6.html
+++ b/ws6.html
@@ -14,7 +14,7 @@
     </header>
     <!-- Sisältö päättyy-->
 	<footer>
-        <a href="ws5.html"><< Edellinen</a></a>
+        <a href="ws5.html"><< Edellinen</a> || <a href="ws7.html">Seuraava >></a>
         <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 </body>
