--- a/ws6_solution.html
+++ b/ws6_solution.html
@@ -16,7 +16,7 @@
         <!-- Sisältö päättyy-->
     </main>
 	<footer>
-        <a href="ws5_solution.html"><< Edellinen</a>
+        <a href="ws5_solution.html"><< Edellinen</a> || <a href="ws7_solution.html">Seuraava >></a>
         <p>&copy; Meija Lohiniva Oulu UAS</p>
     </footer>
 	<script src="JS/ws6.js"></script>
