Fixed index link

--- a/ws2.html
+++ b/ws2.html
@@ -13,7 +13,7 @@
     <!-- Body-osiossa on kaikki mitä sivulla näkyy -->
     <!-- Header-elementti on HTML5-elementti, jolla kerrotaan, että tässä on header-elementit -->
     <header>
-        <h2><a href="/">Ohjelmoinnin perusteet</a></h2>
+        <h2><a href="index.html">Ohjelmoinnin perusteet</a></h2>
         <img src="img/javascript.png" alt="JavaScript Logo">
         <h1>WS2 - Muuttujat, operaattorit ja tapahtumat</h1>
     </header>
