--- a/ws3.html
+++ b/ws3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h2><a href="/">Ohjelmoinnin perusteet</a></h2>
+        <h2><a href="index.html">Ohjelmoinnin perusteet</a></h2>
         <img src="img/javascript.png" alt="JavaScript Logo">
         <h1>WS3 - BOM & DOM</h1>
     </header>
