--- a/ws7_solution.html
+++ b/ws7_solution.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h2><a href="/">Ohjelmoinnin perusteet</a></h2>
+        <h2><a href="index.html">Ohjelmoinnin perusteet</a></h2>
         <img src="img/javascript.png" alt="JavaScript Logo">
         <h1>WS7 - Errors</h1>
         <p>Tässä tehtävässä tarkoitus on korjata JavaScriptiin eksyneet virheet, jotta alla olevat tehtävät toimivat. Käytä consolea apuna.</p>
