--- a/ws2_solution.html
+++ b/ws2_solution.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>WS2 - Muuttujat, operaattorit & tapahtumat</title>
+	<title>WS2 - Muuttujat, operaattorit ja tapahtumat</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
