--- a/ws3.html
+++ b/ws3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>WS3 - BOM & DOM</title>
+    <title>WS3 - BOM ja DOM</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
